Prevent the slider unit from wrapping
Closes #1853

--- a/app/assets/stylesheets/slider.sass
+++ b/app/assets/stylesheets/slider.sass
@@ -95,6 +95,7 @@ $slider-box-height: 22px
   .output
     text-align: right
     width: 73px
+    white-space: nowrap
 
   .info-wrap
     border: 1px solid white
